--- a/package.json
+++ b/package.json
@@ -1,16 +1,51 @@
 {
-  "name": "holiday-reminder",
+  "name": "node-es6-starter",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "NODE_ENV=testing node index.js",
-    "start": "NODE_ENV=production node index.js"
+  "description": "Node.js ES6 starter with Babel & ESLint",
+  "main": "lib/index.js",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
-  "author": "Invoke",
+  "eslintConfig": {
+    "extends": "airbnb/base"
+  },
+  "scripts": {
+    "lint": "eslint src/**",
+    "build": "babel --presets es2015 src -d lib",
+    "prepublish": "npm run build",
+    "start": "NODE_ENV=production node lib/",
+    "dev": "./node_modules/.bin/babel-node src/",
+    "test-cov": "babel-node ./node_modules/.bin/isparta cover _mocha",
+    "test": "babel-node ./node_modules/.bin/_mocha"
+  },
+  "engines": {
+    "node": ">=6.1.0",
+    "npm": ">=3.8.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/palanik/node-es6-starter.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "author": "N. Palani Kumanan",
   "license": "MIT",
   "dependencies": {
-    "moment": "^2.18.1",
-    "node-fetch": "^1.7.3"
+    "moment": "^2.18",
+    "node-fetch": "^1.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "isparta": "^4.0.0",
+    "mocha": "^3.5.0"
   }
 }
